Fixed left hand nav alignment issue

--- a/shared/oae/css/oae.base.css
+++ b/shared/oae/css/oae.base.css
@@ -98,7 +98,7 @@ a:hover, .btn-link:hover, a:focus, .btn-link:focus {
     font-size: 1.5em;
     margin-right: 10px;
     position: relative;
-    top: 8px;
+    top: 6px;
     width: 20px;
 }
 
